--- a/bower.json
+++ b/bower.json
@@ -2,10 +2,17 @@
   "name": "jquery-trap-input",
   "version": "1.2.0",
   "homepage": "https://github.com/julienw/jquery-trap-input",
-  "authors": [
-    "julienw"
-  ],
-  "description": "The jQuery trap input plugin implements input trapping as described by the Web Accessibility Initiative.",
+    "author": {
+      "name": "Julien Wajsberg",
+      "url": "http://everlong.org/"
+    },
+  "licenses": [
+    {
+        "type": "MIT-like",
+        "url": "LICENSE.txt"
+    }
+  ]
+  "description" : "The jQuery trap input plugin implements input trapping as described by the Web Accessibility Initiative.",
   "main": "jquery.trap.js",
   "keywords": [
     "jquery",
@@ -13,12 +20,12 @@
     "trap",
     "modal"
   ],
-  "license": "MIT",
   "ignore": [
     "**/.*",
     "node_modules",
     "bower_components",
-    "test",
-    "tests"
+    "examples",
+    "lib",
+    "website"
   ]
 }
